<resources>
    <string name="app_name">Super Store</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_authentication" translatable="false">AuthenticationActivity</string>
    <string name="auth_welcome_msg">Welcome to Super Store</string>
    <string name="sign_in_msg">Sign in to continue</string>
    <string name="email_et_hint">Your Email</string>
    <string name="password_et_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">Or</string>
    <string name="google_sign_in_btn_msg">Login with Google</string>
    <string name="facebook_sign_in_btn_msg">Login with Facebook</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_password_msg">Enter your email, to send an email to update your password.</string>
    <string name="dont_have_an_account_msg">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="generic_err_msg">Error please try again later.</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="google_sign_in_field_msg">Google sign in failed, please retry again later.</string>
    <string name="register_welcome_msg">Lest\'s Go</string>
    <string name="sign_up_msg">Create a new account</string>
    <string name="name_et_hint">Full name</string>
    <string name="password_again_et_hint">Password again</string>
    <string name="sign_up">Sgin up</string>
    <string name="google_signup_btn_msg">Sgin up with google</string>
    <string name="facebook_signup_btn_msg">Sign with facebook</string>
    <string name="have_an_account_msg">have an account</string>
    <string name="send">Send</string>
</resources>