<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.elhady.superstore.ui.authentication.viewmodel.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_primary_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/auth_welcome_msg"
                app:fontFamily="@font/poppins_extra_light" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MessageTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in_msg"
                app:fontFamily="@font/poppins_regular" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_et"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:text="@={viewModel.email}"
                android:drawableStart="@drawable/ic_email"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/email_et_hint"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_et"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:text="@={viewModel.password}"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password_et_hint"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_btn"
                style="@style/PrimaryButtonStyle"
                android:layout_marginTop="16dp"
                android:onClickListener="@{() -> viewModel.loginWithEmailAndPassword()}"
                android:text="@string/sign_in" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="@color/neutral_grey" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_color" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_sign_in_btn"
                style="@style/SocialButtonStyle"
                android:drawableStart="@drawable/ic_google"
                android:text="@string/google_sign_in_btn_msg" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/facebook_sign_in_btn"
                style="@style/SocialButtonStyle"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_facebook"
                android:text="@string/facebook_sign_in_btn_msg" />

            <TextView
                android:id="@+id/forgot_password_tv"
                style="@style/MediumPrimaryTextViewStyle"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/forget_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MessageTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account_msg" />

                <TextView
                    android:id="@+id/register_tv"
                    style="@style/MediumPrimaryTextViewStyle"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/register" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
